<resources>
    <string name="app_name">MeteoErcilla</string>
    <string name="registro_titulo">REGISTRO</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_introducir_correo">Correo</string>
    <string name="registro_contrasena">Contraseña</string>
    <string name="registro_telefono">Telefono</string>
    <string name="registro_repetir_contrasena">Repite la contraseña</string>
    <string name="registro_elegir_provincias">Elige tus provincias</string>
    <string name="registro_contrasena_invalida">Las contraseñas no coinciden</string>
    <string name="registro_provincias_vacias">Debes elegir una o mas provincias</string>
    <string name="registro_existe">Este correo o numero de telefono ya existe</string>
    <string name="registro_vacio">No puede haber campos vacios</string>
    <string name="registro_exito">El usuario ha sido registrado con exito</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="busqueda_fechas">Rango de fechas</string>
    <string name="busqueda_sin_resultados">No hay ningun resultado con esta busqueda</string>
    <string name="resultados_busqueda">RESULTADOS DE LA BUSQUEDA</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="busqueda_provincias">Provincias</string>
    <string name="busqueda_nivel_peligro">Nivel de peligro</string>
    <string name="busqueda_tipo_alerta">Tipo de alerta</string>
    <string name="alerta_notificacion"> ⚠️ Alerta meteorológica </string>
    <string name="busqueda_alertas">Busqueda de alertas</string>
    <string name="buscar">Buscar</string>
    <string name="menu_titulo">MENU PRINCIPAL</string>
    <string name="menu_buscar">BUSCAR</string>
    <string name="menu_editar">EDITAR</string>ç
    <string name="menu_logout">CERRAR SESION</string>
    <string name="resultados_ubicacion">Ubicacion</string>
    <string name="resultados_provincia">Provincia</string>
    <string name="resultados_fecha">Fecha</string>
    <string name="resultados_nivel_peligro">Nivel de peligro</string>
    <string name="nivel_leve">Leve</string>
    <string name="nivel_moderado">Moderado</string>
    <string name="nivel_importante">Importante</string>
    <string name="nivel_grave">Grave</string>
    <string name="nivel_extremo">Extremo</string>
    <string name="derrumbamientos">Derrumbamientos</string>
    <string name="lluvias_tormentas">Lluvias y tormentas</string>
    <string name="granizo">Granizo</string>
    <string name="nieve">Nieve</string>
    <string name="viento">Vientos</string>
    <string name="precaucion">Se recomienda precaucion</string>
    <string name="notificaciones_por">por</string>
    <string name="alerta_en">Alerta en:</string>
    <string name="error_conexion">Error de conexion intentalo de nuevo mas tarde</string>
    <string name="editar">EDITAR</string>
    <string name="editar_usuario">EDITAR DATOS DE USUARIO</string>
</resources>