<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAE6FF"
    tools:context=".MenuActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/main_menu_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@android:color/black"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login_background.json"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_buscarActivity"
        android:layout_width="255dp"
        android:layout_height="85dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#03A8FF"
        android:onClick="activityBusqueda"
        android:text="@string/menu_buscar"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tituloMenu" />

    <Button
        android:id="@+id/btn_editarDatos"
        android:layout_width="255dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#03A8FF"
        android:onClick="activityEditar"
        android:text="@string/menu_editar"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscarActivity" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="255dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#D11C0C"
        android:onClick="logout"
        android:text="@string/menu_logout"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_editarDatos" />

    <TextView
        android:id="@+id/tx_tituloMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/menu_titulo"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>