<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAE6FF"
    tools:context=".EditarDatosActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/edit_menu_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@android:color/black"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login_background.json"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tx_tituloEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/editar_usuario"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/registro_correo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tituloEditar" />

    <EditText
        android:id="@+id/tx_correoEditar"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registro_introducir_correo"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="#FF9800"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCorreo" />

    <TextView
        android:id="@+id/viewTelefono2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registro_telefono"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_correoEditar" />

    <EditText
        android:id="@+id/tx_telefonoEditar"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registro_telefono"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTelefono2" />

    <TextView
        android:id="@+id/tx_tituloProvinciasEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registro_elegir_provincias"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_telefonoEditar" />

    <Spinner
        android:id="@+id/sp_provinciasEditar"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="#F8F8F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tituloProvinciasEditar" />

    <Button
        android:id="@+id/btn_editarUsuario"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#03A8FF"
        android:onClick="editarProvincias"
        android:text="EDITAR"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_provinciasEditar" />
</androidx.constraintlayout.widget.ConstraintLayout>