<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAE6FF"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonBackground"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login_background.json"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tx_tituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/iniciar_sesion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/tx_contrasena_login"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registro_contrasena"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="#FF9800"
        android:textColorHint="#9E000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContrasena_Login" />

    <EditText
        android:id="@+id/tx_correo_login"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/registro_introducir_correo"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="#FF9800"
        android:textColorHint="#9E000000"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCorreo_Login" />

    <TextView
        android:id="@+id/viewCorreo_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/registro_correo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_tituloLogin" />

    <TextView
        android:id="@+id/viewContrasena_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/registro_contrasena"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_correo_login" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/buttonBackground"
        android:layout_width="255dp"
        android:layout_height="85dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_contrasena_login"
        app:lottie_autoPlay="true"
        app:lottie_fileName="button_animation.json"
        app:lottie_loop="true" />

    <Button
            android:id="@+id/btn_loginUsuario"
            android:layout_width="255dp"
            android:layout_height="85dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:onClick="loginUsuario"
            android:text="@string/iniciar_sesion"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_contrasena_login" />

</androidx.constraintlayout.widget.ConstraintLayout>